--- a/PTUDDD-main/app/src/main/res/layout/item_chitiettheongay.xml
+++ b/PTUDDD-main/app/src/main/res/layout/item_chitiettheongay.xml
@@ -101,7 +101,15 @@
                     android:minHeight="50dp"
                     android:background="@drawable/bg_notifications"
                     android:text="Đặng Thị Nhung"/>
+
+
             </TableRow>
+            <Button
+                android:id="@+id/btnCancelBooking"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hủy" />
+
 
         </TableLayout>
     </LinearLayout>
