--- a/PTUDDD-main/app/src/main/res/layout/activity_login.xml
+++ b/PTUDDD-main/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="108dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/LogoBoYTe" />
+            app:srcCompat="@drawable/logoboyte" />
 
     </LinearLayout>
 
@@ -133,5 +133,19 @@
             android:text="Đăng nhập"
             android:background="@drawable/custom_buttom"
             />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="20dp">
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnRegister"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Đăng ký"
+            android:background="@drawable/custom_buttom" />
     </LinearLayout>
 </LinearLayout>
